@@ -1,3 +1,6 @@
+15/05/2011 OsiXpr
+  - added option (mipstart) to pass column solution as initial solution to a MIP solve
+
 30/04/2011 OsiCpx, OsiGrb
   - added option (mipstart) to pass column solution as initial solution to a MIP solve
 
